name:           hirc
version:        0.2
synopsis:       hirc: A simple IRC bot
description:
author:         Nils Schweinsberg <mail@n-sch.de>
maintainer:     Nils Schweinsberg <mail@n-sch.de>
category:       Network

build-type:     Simple
cabal-version:  >= 1.8

library
    ghc-options: -Wall
    hs-source-dirs: src
    build-depends:
        base == 4.*,
        mtl == 2.*,
        containers == 0.*,
        network == 2.*,
        curl == 1.*,
        time == 1.*,
        directory == 1.*,
        irc == 0.*,
        mstate == 0.*,
        monad-peel == 0.*,
        regex-posix == 0.*,
        tagsoup == 0.*,
        utf8-string == 0.*,
        random == 1.*,
        safecopy == 0.*,
        acid-state == 0.*
    exposed-modules:
        Hirc
    other-modules:
        Hirc.Acid
        Hirc.Connection.Managed
        Hirc.Types
        Hirc.Types.Commands
        Hirc.Types.Connection
        Hirc.Types.Hirc
        Hirc.Types.Instances
        Hirc.Commands
        Hirc.Connection
        Hirc.Logging
        Hirc.Messages
        Hirc.Utils


executable hirc
    hs-source-dirs: app
    main-is: Main.hs
    build-depends:
        base == 4.*,
        mtl == 2.*,
        containers == 0.*,
        network == 2.*,
        curl == 1.*,
        time == 1.*,
        directory == 1.*,
        irc == 0.*,
        mstate == 0.*,
        monad-peel == 0.*,
        regex-posix == 0.*,
        tagsoup == 0.*,
        utf8-string == 0.*,
        random == 1.*,
        safecopy == 0.*,
        acid-state == 0.*,
        hirc == 0.*



source-repository head
    type:         git
    location:     git://github.com/mcmaniac/hirc.git
