name:           hirc
version:        0.2
synopsis:       hirc: A simple IRC bot
description:
author:         Nils Schweinsberg <mail@n-sch.de>
maintainer:     Nils Schweinsberg <mail@n-sch.de>
category:       Network

build-type:     Simple
cabal-version:  >= 1.8

library
    ghc-options: -Wall
    hs-source-dirs: src
    build-depends:
        base,
        mtl,
        containers,
        text,
        network,
        connection,
        curl,
        time,
        directory,
        irc,
        mstate,
        monad-peel,
        regex-posix,
        tagsoup,
        utf8-string,
        random,
        safecopy,
        acid-state,
        stm,
        bytestring
    exposed-modules:
        Hirc
    other-modules:
        Hirc.Acid
        Hirc.Connection.Managed
        Hirc.Types
        Hirc.Types.Commands
        Hirc.Types.Connection
        Hirc.Types.Hirc
        Hirc.Types.Instances
        Hirc.Commands
        Hirc.Connection
        Hirc.Logging
        Hirc.Messages
        Hirc.Utils


executable hirc
    hs-source-dirs: app
    main-is: Main.hs
    build-depends:
        base,
        mtl,
        containers,
        network,
        curl,
        time,
        directory,
        irc,
        mstate,
        monad-peel,
        regex-posix,
        tagsoup,
        utf8-string,
        random,
        safecopy,
        acid-state,
        hirc



source-repository head
    type:         git
    location:     git://github.com/mcmaniac/hirc.git
